Add mosaicker script to make bandwise mosaic from downloaded image

--- a/notebooks/visualize_bands.ipynb
+++ b/notebooks/visualize_bands.ipynb
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "3b95c79a",
       "metadata": {},
       "outputs": [
@@ -142,6 +142,17 @@
             "6 min 2485.4791507152 max 2616.1521101480544\n",
             "7 min 2314.421502454649 max 2413.1005902571205\n",
             "8 min 2703.0943185733095 max 2817.810826924864\n"
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
           ]
         }
       ],
