Add ndvi visualization notebook

--- a/notebooks/visualize_bands.ipynb
+++ b/notebooks/visualize_bands.ipynb
@@ -17,11 +17,17 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Using raster: f:\\brahmanbariavegetation\\data\\processed\\mosaic_s2_oct_2016_clipped.tif\n",
-            "Current working dir: f:\\brahmanbariavegetation\\notebooks\n"
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     14\u001b[39m     raster_path = candidate\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m     matches = \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mproject_root\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrglob\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdefault_rel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     17\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m matches:\n\u001b[32m     18\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mCould not locate \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdefault_rel\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m from project root \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mproject_root\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\pathlib.py:1109\u001b[39m, in \u001b[36mPath.rglob\u001b[39m\u001b[34m(self, pattern, case_sensitive)\u001b[39m\n\u001b[32m   1107\u001b[39m     pattern_parts.append(\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m   1108\u001b[39m selector = _make_selector((\u001b[33m\"\u001b[39m\u001b[33m**\u001b[39m\u001b[33m\"\u001b[39m,) + \u001b[38;5;28mtuple\u001b[39m(pattern_parts), \u001b[38;5;28mself\u001b[39m._flavour, case_sensitive)\n\u001b[32m-> \u001b[39m\u001b[32m1109\u001b[39m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mselector\u001b[49m\u001b[43m.\u001b[49m\u001b[43mselect_from\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m   1110\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01myield\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\pathlib.py:237\u001b[39m, in \u001b[36m_RecursiveWildcardSelector._select_from\u001b[39m\u001b[34m(self, parent_path, scandir)\u001b[39m\n\u001b[32m    235\u001b[39m successor_select = \u001b[38;5;28mself\u001b[39m.successor._select_from\n\u001b[32m    236\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m starting_point \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._iterate_directories(parent_path):\n\u001b[32m--> \u001b[39m\u001b[32m237\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msuccessor_select\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstarting_point\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscandir\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m    238\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01myield\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\pathlib.py:205\u001b[39m, in \u001b[36m_WildcardSelector._select_from\u001b[39m\u001b[34m(self, parent_path, scandir)\u001b[39m\n\u001b[32m    201\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    202\u001b[39m     \u001b[38;5;66;03m# We must close the scandir() object before proceeding to\u001b[39;00m\n\u001b[32m    203\u001b[39m     \u001b[38;5;66;03m# avoid exhausting file descriptors when globbing deep trees.\u001b[39;00m\n\u001b[32m    204\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m scandir(parent_path) \u001b[38;5;28;01mas\u001b[39;00m scandir_it:\n\u001b[32m--> \u001b[39m\u001b[32m205\u001b[39m         entries = \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mscandir_it\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    206\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[32m    207\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
+            "\u001b[31mKeyboardInterrupt\u001b[39m: "
           ]
         }
       ],
@@ -52,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -98,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
