Fix crs problem both in .py scripts and .ipynb notebooks and also fix padding problem in notebook map

--- a/notebooks/visualize_bands.ipynb
+++ b/notebooks/visualize_bands.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -28,6 +28,17 @@
             "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\pathlib.py:237\u001b[39m, in \u001b[36m_RecursiveWildcardSelector._select_from\u001b[39m\u001b[34m(self, parent_path, scandir)\u001b[39m\n\u001b[32m    235\u001b[39m successor_select = \u001b[38;5;28mself\u001b[39m.successor._select_from\n\u001b[32m    236\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m starting_point \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._iterate_directories(parent_path):\n\u001b[32m--> \u001b[39m\u001b[32m237\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msuccessor_select\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstarting_point\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscandir\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m    238\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01myield\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\n",
             "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\pathlib.py:205\u001b[39m, in \u001b[36m_WildcardSelector._select_from\u001b[39m\u001b[34m(self, parent_path, scandir)\u001b[39m\n\u001b[32m    201\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    202\u001b[39m     \u001b[38;5;66;03m# We must close the scandir() object before proceeding to\u001b[39;00m\n\u001b[32m    203\u001b[39m     \u001b[38;5;66;03m# avoid exhausting file descriptors when globbing deep trees.\u001b[39;00m\n\u001b[32m    204\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m scandir(parent_path) \u001b[38;5;28;01mas\u001b[39;00m scandir_it:\n\u001b[32m--> \u001b[39m\u001b[32m205\u001b[39m         entries = \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mscandir_it\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    206\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[32m    207\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
             "\u001b[31mKeyboardInterrupt\u001b[39m: "
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
           ]
         }
       ],
