--- a/notebooks/visualize_ndvi.ipynb
+++ b/notebooks/visualize_ndvi.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0ddc4565",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,12 @@
     "PROJECT_ROOT = Path.cwd().parent\n",
     "sys.path.insert(0, str(PROJECT_ROOT))\n",
     "\n",
-    "import src.geo_env   # MUST come immediately after path fix\n"
+    "import src.geo_env   # MUST come immediately after path fix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "19731e46",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "ce7ff170",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "e1730ff6",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "e400bb7f",
    "metadata": {},
    "outputs": [
